Version 9 	 2010-07-12 	 Added some more config files 
Version 8 	 2010-07-11 	 redmine cache - omit 404 links from re-caching 
Version 7 	 2010-07-10 	 Script to refresh redmine cache 
Version 6 	 2010-07-04 	 Delete Cookies in create_osum_profile.py 
Version 5 	 2010-06-23 	 Script to create OSUM profile 
Version 4 	 2010-06-23 	 Added ps_mem 
Version 3 	 2010-05-06 	 New: Automatically creating ChangeLog.txt 
Version 2 	 2010-05-06 	 Create version.py file 
Version 1 	 2010-05-05 	 Added mdb2sqlite 
Version 0 	 2010-04-09 	 Initial Commit 