@@ -1,0 +1,31 @@
+# min hour dom mon dow command
+
+scripty = $HOME/scripts/scripty
+
+###################### Drupal Related #######################
+# Run drupal cron
+@daily wget -O - -t 1 http://rmv.ac.in/supercron.php >/dev/null 2>&1
+
+# Push Drupal website to Bitbuket private repository
+0 4 * * * $scripty/drupal/push_drupal_to_bitbucket.sh >/dev/null 2>&1
+
+# Fill Cache
+0 3 * * * $scripty/drupal/fill_boost_cache.sh >/dev/null 2>&1
+
+###################### Redmine Related #######################
+#Freeup memeory used by ruby process (redmine)
+@hourly sudo service redmine restart >/dev/null 2>&1
+
+
+###################### Backups #######################
+# Take mysql backup
+@hourly  $scripty/mysql/backup_mysql.sh >/dev/null 2>&1
+
+###################### Misc #######################
+
+# Send Birthday greetings everyday at 5am
+0 5 * * * python $HOME/vidyalaya_apps/cron/cron_jobs.py >/dev/null 2>&1
+
+# Sync Repos in Bitbucket to GoogleCode
+@daily $scripty/backup/backup_mercurial_repos.sh >/dev/null 2>&1
+
