@@ -1,9 +1,10 @@
-# minute hour dom month dow
-#
+# min hour dom mon dow command
 
-########### Redmine Projects ##############################
+scripty = $HOME/scripts/scripty
+
+###################### Redmine Related #######################
 # Run HgRedmine Proxy
-@reboot /home/rmvadm/scripts/scripty/redmine/run_hgredmine_proxy.sh >/dev/null 2>&1
+@reboot $scripty/redmine/run_hgredmine_proxy.sh >/dev/null 2>&1
 
 # Refresh commit info in projects
 */5 * * * *  ruby /var/www/redmine/script/runner "Repository.fetch_changesets" -e production >/dev/null 2>&1
@@ -12,14 +13,14 @@
 # */5 * * * *  /home/rmvadm/scripts/create_hg_repos_for_redmine.py >/dev/null 2>&1
 
 # Create SVN Repos - Should be run as root
-# */5 * * * *  /home/rmvadm/scripts/create_svn_repos_for_redmine.sh >/dev/null 2>&1
+*/5 * * * *  sudo $scripty/redmine/create_svn_repos_for_redmine.sh >/dev/null 2>&1
 
 # Mirror to Rackspace Server (projects.rmv.ac.in)
 #0 17 * * * /home/rmvadm/scripts/mirror_redmine_on_rackspace.sh >/dev/null 2>&1
 
 ################ Backups #################################
 # Backup using rdiff-backup (un-encrypted)
-0 * * * *  /home/rmvadm/scripts/scripty/backup/backup_rmv_intranet_using_rdiff.sh >/dev/null 2>&1
+0 * * * *  $scripty/backup/backup_rmv_intranet_using_rdiff.sh >/dev/null 2>&1
 
 # Save duplicity backups to the Windows Server
-30 16 * * * /home/rmvadm/scripts/scripty/backup/backup_rmv_intranet_to_lan_server.sh >/dev/null 2>&1
+30 16 * * * $scripty/backup/backup_rmv_intranet_to_lan_server.sh >/dev/null 2>&1
