@@ -1,3 +1,4 @@
+Version 10 	 2010-07-12 	 Lot of new scripts imported 
 Version 9 	 2010-07-12 	 Added some more config files 
 Version 8 	 2010-07-11 	 redmine cache - omit 404 links from re-caching 
 Version 7 	 2010-07-10 	 Script to refresh redmine cache 
